Bug 102118 - solaris 2.7, gcc 3.0.1 bustage patch=cls, r=dveditz, sr=alecf, a=rjesup